Fix pseudo element overlapping main section of site.

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ a {
 
 section {
   padding: 100px 32px;
+  position: relative;
 }
 
 footer {
